Prevent flicker when disabling file tree nodes

--- a/frontend/packages/app/src/components/FileTree.less
+++ b/frontend/packages/app/src/components/FileTree.less
@@ -14,6 +14,9 @@
 
   .ant-tree-treenode {
     .ant-tree-node-content-wrapper {
+      line-height: 20px;
+      border-top: 2px transparent solid;
+      border-bottom: 2px transparent solid;
       display: flex;
     }
     .ant-tree-title {
